--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = "^0.68.2"
 pydantic = "^1.8.2"
 httpx = "^0.19.0"
 uvicorn = "^0.15.0"
+docker = "^5.0.3"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.11.1"
